Copy change / Fixed navbar only on mobile

--- a/src/LandingPage/Component/_LandingPage.scss
+++ b/src/LandingPage/Component/_LandingPage.scss
@@ -125,6 +125,7 @@
                 text-align: center;
                 font-family: Raleway !important;
                 font-weight: normal !important;
+                padding: 15px 15px !important;
             }
 
             &__Content {
