--- a/src/Navbar/Component/_Navbar.scss
+++ b/src/Navbar/Component/_Navbar.scss
@@ -3,11 +3,14 @@
 .Navbar {
     position: fixed;
     width: 100%;
-    height: 60px;
+    height: 75px;
     display: flex;
     justify-content: flex-end;
     z-index: 6;
-    background-color: transparent;
+
+    @include desktop {
+        position: absolute;
+    }
 
     &__Controls {
         width: 250px;
